kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app-deployment
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: sample-python-app
        image: priscachidimma/python-sample-app:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-details
          mountPath: "/opt"
          readOnly: true
      volumes:
      - name: db-details
        configMap:
          name: db-details
